--- a/complaints_eda_0914.ipynb
+++ b/complaints_eda_0914.ipynb
@@ -6,16 +6,14 @@
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T11:19:38.616187Z",
-     "start_time": "2023-09-13T11:19:38.568850Z"
+     "end_time": "2023-09-24T13:47:17.239038Z",
+     "start_time": "2023-09-24T13:47:16.240552Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "DataTransformerRegistry.enable('default')"
-      ]
+      "text/plain": "DataTransformerRegistry.enable('default')"
      },
      "execution_count": 1,
      "metadata": {},
@@ -44,7 +42,7 @@
     "from textblob import TextBlob\n",
     "\n",
     "# disable altair limit\n",
-    "alt.data_transformers.disable_max_rows()\n"
+    "alt.data_transformers.disable_max_rows()"
    ]
   },
   {
@@ -283,7 +281,7 @@
     "# load complaints data\n",
     "data = pd.read_csv('complaints.csv')\n",
     "\n",
-    "data.head()\n"
+    "data.head()"
    ]
   },
   {
@@ -925,11 +923,9 @@
    ],
    "source": [
     "# sample 3 rows from the data , and print it out as dictionary\n",
-    "\n",
     "sample_3_rows = data.sample(3).to_dict(orient='records')\n",
     "\n",
-    "sample_3_rows\n",
-    "\n"
+    "sample_3_rows"
    ]
   },
   {
@@ -982,10 +978,9 @@
    ],
    "source": [
     "# check unique values in each column, and print it out as dictionary\n",
-    "\n",
     "n_unique = data.nunique().to_dict()\n",
     "\n",
-    "n_unique\n"
+    "n_unique"
    ]
   },
   {
@@ -1016,15 +1011,12 @@
     }
    ],
    "source": [
-    "\n",
     "# astype date received and date sent to company to datetime\n",
     "\n",
     "data['Date received'] = pd.to_datetime(data['Date received'])\n",
-    "\n",
     "data['Date sent to company'] = pd.to_datetime(data['Date sent to company'])\n",
     "\n",
-    "print(\"data time range: \", data['Date received'].min().date(), data['Date received'].max().date())\n",
-    "\n"
+    "print(\"data time range: \", data['Date received'].min().date(), data['Date received'].max().date())"
    ]
   },
   {
@@ -1136,10 +1128,7 @@
    ],
    "source": [
     "# data volume by year\n",
-    "\n",
     "print(data['Date received'].dt.year.value_counts().sort_index())\n",
-    "\n",
-    "\n",
     "\n",
     "# Perform the value counts and sorting\n",
     "value_counts = data['Date received'].dt.year.value_counts().sort_index().reset_index()\n",
@@ -1151,7 +1140,7 @@
     "    y='Count:Q'\n",
     ").properties(\n",
     "    title='Yearly Counts of Date received'\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -3619,7 +3608,6 @@
    "source": [
     "# topic modeling with LDAModel\n",
     "\n",
-    "\n",
     "# Tokenize the text\n",
     "nltk.download('punkt')\n",
     "consumer_complaints = consumer_complaints.apply(nltk.word_tokenize)\n",
@@ -3668,9 +3656,7 @@
       "\n",
       "\n",
       "Topic 5:\n",
-      "['credit', 'report', 'accounts', 'theft', 'identity', 'items', 'information', '00', 'balance', 'remove']\n",
-      "\n",
-      "\n"
+      "['credit', 'report', 'accounts', 'theft', 'identity', 'items', 'information', '00', 'balance', 'remove']\n"
      ]
     }
    ],
