--- a/supervised_1007.ipynb
+++ b/supervised_1007.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "- number of the company's last 90 days complaints\n",
     "- number of the company's last 90 days disputes\n",
-    "- ratio of the company's last 90 days complaints to the company's last 90 days total complaints (we hypothesize that the higher the ratio, the more likely it is to be disputed)\n",
+    "- ratio of the company's last 90 days disputes to the company's last 90 days total complaints (we hypothesize that the higher the ratio, the more likely it is to be disputed)\n",
     "- word count of each complaint narrative (we hypothesize that the more words a complaint has, the more likely it is to be disputed)\n",
     "- days between date received and date sent to company (we hypothesize that the longer it takes for the company to respond, the more likely it is to be disputed because the responsiveness)  \n",
     "\n",
