--- a/supervised_1007.ipynb
+++ b/supervised_1007.ipynb
@@ -484,7 +484,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Vectorize narrative_clean text to TF-IDF features 5000 Features/Dimensions"
+    "### Vectorize narrative_clean text to TF-IDF features 5000 Features/Dimensions"
    ],
    "metadata": {
     "collapsed": false
@@ -515,7 +515,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Drop columns logic"
+    "### Drop columns logic"
    ],
    "metadata": {
     "collapsed": false
@@ -631,7 +631,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### One hot encode categorical features"
+    "### One hot encode categorical features"
    ],
    "metadata": {
     "collapsed": false
@@ -655,7 +655,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Concatenate TF-IDF features and encoded dataframe\n",
+    "### Concatenate TF-IDF features and encoded dataframe\n",
     "5000 D + 3435 D = 8435 (features/dimensions)"
    ],
    "metadata": {
@@ -680,7 +680,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Exporting cleaned and manipulated data to csv for reusability and avoid re-run the whole notebook"
+    "### Exporting cleaned and manipulated data to csv for reusability and avoid re-run the whole notebook"
    ],
    "metadata": {
     "collapsed": false
@@ -768,7 +768,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Imbalance Handling"
+    "### Imbalance Handling"
    ],
    "metadata": {
     "collapsed": false
